@@ -12,6 +12,8 @@ PHP                                                                        NEWS
   . SA_ONSTACK is now set for signal handlers to be friendlier to other
     in-process code such as Go's cgo. (Kévin Dunglas)
   . SA_ONSTACK is now set when signals are disabled. (Kévin Dunglas)
+  . Fix GH-9649: Signal handlers now do a no-op instead of crashing when
+    executed on threads not managed by TSRM. (Kévin Dunglas)
 
 - Fileinfo:
   . Upgrade bundled libmagic to 5.43. (Anatol)
